--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -14,8 +14,8 @@
 ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ;本项目收录的直连规则
-ruleset=🎯 全球直连,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
-ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
+ruleset=🎯 全球直连,clash-domain:https://raw.githubusercontent.com/biuxin/Custom_OpenClash_Rules/main/rule/Custom_Direct_Domain.yaml,28800
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/biuxin/Custom_OpenClash_Rules/main/rule/Custom_Direct_Classical_IP.yaml,28800
 ;本项目收录的代理规则
 ruleset=🚀 手动选择,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
 ruleset=🎯 全球直连,[]GEOSITE,cn
